refined the attention layer implementation. added more descriptions

--- a/Ch11/11.1_seq2seq_machine_translation.ipynb
+++ b/Ch11/11.1_seq2seq_machine_translation.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -231,13 +231,98 @@
        "4  Run.       Lauf!"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EN</th>\n",
+       "      <th>DE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>227075</th>\n",
+       "      <td>Even if some sentences by non-native speakers ...</td>\n",
+       "      <td>Auch wenn Sätze von Nichtmuttersprachlern mitu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>227076</th>\n",
+       "      <td>If someone who doesn't know your background sa...</td>\n",
+       "      <td>Wenn jemand, der deine Herkunft nicht kennt, s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>227077</th>\n",
+       "      <td>If someone who doesn't know your background sa...</td>\n",
+       "      <td>Wenn jemand Fremdes dir sagt, dass du dich wie...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>227078</th>\n",
+       "      <td>If someone who doesn't know your background sa...</td>\n",
+       "      <td>Wenn jemand, der nicht weiß, woher man kommt, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>227079</th>\n",
+       "      <td>Doubtless there exists in this world precisely...</td>\n",
+       "      <td>Ohne Zweifel findet sich auf dieser Welt zu je...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                       EN  \\\n",
+       "227075  Even if some sentences by non-native speakers ...   \n",
+       "227076  If someone who doesn't know your background sa...   \n",
+       "227077  If someone who doesn't know your background sa...   \n",
+       "227078  If someone who doesn't know your background sa...   \n",
+       "227079  Doubtless there exists in this world precisely...   \n",
+       "\n",
+       "                                                       DE  \n",
+       "227075  Auch wenn Sätze von Nichtmuttersprachlern mitu...  \n",
+       "227076  Wenn jemand, der deine Herkunft nicht kennt, s...  \n",
+       "227077  Wenn jemand Fremdes dir sagt, dass du dich wie...  \n",
+       "227078  Wenn jemand, der nicht weiß, woher man kommt, ...  \n",
+       "227079  Ohne Zweifel findet sich auf dieser Welt zu je...  "
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
    ]
   },
   {
@@ -251,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -739,12 +824,12 @@
      "output_type": "stream",
      "text": [
       "English\n",
-      "['', '[UNK]', 'tom', 'to', 'you', 'the', 'i', 'a', 'is', 'that']\n",
-      "2238\n",
+      "['', '[UNK]', 'tom', 'you', 'to', 'the', 'i', 'a', 'is', 'that']\n",
+      "349\n",
       "\n",
       "German\n",
-      "['', '[UNK]', 'sos', 'eos', 'ich', 'tom', 'nicht', 'ist', 'das', 'du']\n",
-      "2497\n"
+      "['', '[UNK]', 'sos', 'eos', 'tom', 'ich', 'nicht', 'ist', 'du', 'sie']\n",
+      "326\n"
      ]
     }
    ],
@@ -1479,7 +1564,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Seq2Seq model with Attention"
+    "## Seq2Seq model with Attention\n",
+    "\n",
+    "Here we will define a sequence-to-sequence model with attention. Specifically we will be using [Bahdanau attention](https://arxiv.org/pdf/1409.0473.pdf). Bahdanau attention enables the decoder to look at all of the history of the encoder outputs, then select and mix various outputs for every decoding step as required. The mixing propotions are jointly learned during the training, using trainable weights."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining a layer for Bahdanau Attention"
    ]
   },
   {
@@ -1508,7 +1602,7 @@
     "\n",
     "        assert isinstance(input_shape, list)\n",
     "        # Create a trainable weight variable for this layer.\n",
-    "\n",
+    "        # Weight matrices of the attention layer\n",
     "        self.W_a = self.add_weight(name='W_a',\n",
     "                                   shape=tf.TensorShape((input_shape[0][2], input_shape[0][2])),\n",
     "                                   initializer='uniform',\n",
@@ -1524,16 +1618,12 @@
     "\n",
     "        super(DecoderRNNAttentionWrapper, self).build(input_shape)  # Be sure to call this at the end\n",
     "\n",
-    "    def call(self, inputs, initial_state, training=False, verbose=False):\n",
+    "    def call(self, inputs, initial_state, training=False):\n",
     "        \"\"\"\n",
     "        inputs: [encoder_output_sequence, decoder_output_sequence]\n",
     "        \"\"\"\n",
     "        \n",
     "        encoder_outputs, decoder_inputs = inputs\n",
-    "        \n",
-    "        if verbose:\n",
-    "            print('encoder_out_seq.shape = {}'.format(encoder_outputs.shape))\n",
-    "            print('decoder_out_seq.shape = {}'.format(decoder_inputs.shape))\n",
     "\n",
     "        def _step(inputs, states):\n",
     "            \"\"\" Step function for computing energy for a single decoder state\n",
@@ -1551,15 +1641,9 @@
     "            \"\"\" Computing hj.Ua \"\"\"                        \n",
     "            U_a_dot_s = K.expand_dims(K.dot(states[0], self.U_a), 1)  # <= batch_size, 1, latent_dim\n",
     "                      \n",
-    "            \n",
-    "            if verbose:\n",
-    "                print('Ua.h>', U_a_dot_s.shape)\n",
-    "\n",
     "            \"\"\" tanh(S.Wa + hj.Ua) \"\"\"\n",
     "            # <= batch_size*en_seq_len, latent_dim\n",
     "            Wh_plus_Us = K.tanh(W_a_dot_h + U_a_dot_s)\n",
-    "            if verbose:\n",
-    "                print('Ws+Uh>', Ws_plus_Uh.shape)\n",
     "\n",
     "            \"\"\" softmax(va.tanh(S.Wa + hj.Ua)) \"\"\"\n",
     "            # <= batch_size, en_seq_len\n",
@@ -1567,26 +1651,23 @@
     "            # <= batch_size, en_seq_len\n",
     "            e_i = K.softmax(e_i)\n",
     "\n",
-    "            if verbose:\n",
-    "                print('ei>', e_i.shape)\n",
-    "            \n",
-    "            \"Computing c_i using e_i\"\n",
+    "            \"\"\" Computing c_i using e_i and h_j (for all j) \"\"\"\n",
     "            # <= batch_size, hidden_size\n",
     "            c_i = K.sum(encoder_outputs * K.expand_dims(e_i, -1), axis=1)\n",
     "            \n",
-    "            s, states = self._cell_fn(K.concatenate([inputs, c_i], axis=-1), states)  \n",
-    "            \n",
-    "            if verbose:\n",
-    "                print('ci>', c_i.shape)            \n",
+    "            \"\"\" Concat the current input and c_i and feed it to the RNN \"\"\"\n",
+    "            s, states = self._cell_fn(K.concatenate([inputs, c_i], axis=-1), states)              \n",
     "        \n",
     "            return (s, e_i), states\n",
     "\n",
-    "        \"\"\" Computing energy outputs \"\"\"\n",
-    "        # e_outputs => (batch_size, de_seq_len, en_seq_len)\n",
+    "        \"\"\" Computing outputs \"\"\"\n",
+    "        \n",
     "        last_out, attn_outputs, _ = K.rnn(\n",
     "            _step, decoder_inputs, [initial_state],\n",
     "        )\n",
     "        \n",
+    "        # attn_out => (batch_size, de_seq_len, de_hidden_size)\n",
+    "        # attn_energy => (batch_size, de_seq_len, en_seq_len)\n",
     "        attn_out, attn_energy = attn_outputs        \n",
     "\n",
     "\n",
@@ -1598,6 +1679,13 @@
     "            tf.TensorShape((input_shape[1][0], input_shape[1][1], input_shape[1][2])),\n",
     "            tf.TensorShape((input_shape[1][0], input_shape[1][1], input_shape[0][1]))\n",
     "        ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining the full model"
    ]
   },
   {
@@ -1637,7 +1725,7 @@
     "        return tf.keras.models.Model(inputs=inp, outputs=vectorized_out, name=name), vectorize_layer.get_vocabulary()\n",
     "    \n",
     "        \n",
-    "def get_encoder_with_attention(n_vocab, vectorizer):\n",
+    "def get_encoder(n_vocab, vectorizer):\n",
     "    \"\"\" Define the encoder of the seq2seq model\"\"\"\n",
     "    \n",
     "    # The input is (None,1) shaped and accepts an array of strings\n",
@@ -1720,6 +1808,13 @@
     "# Define the final model with attention\n",
     "encoder = get_encoder_with_attention(en_vocab, en_vectorizer)\n",
     "final_model_with_attention = get_final_seq2seq_model_with_attention(de_vocab, encoder, de_vectorizer)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compiling the model"
    ]
   },
   {
