Fixed bugs in the attention computation. Removed the deprecated attention.py

--- a/Ch11/11.1_seq2seq_machine_translation.ipynb
+++ b/Ch11/11.1_seq2seq_machine_translation.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "4  Run.       Lauf!"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "227079  Ohne Zweifel findet sich auf dieser Welt zu je...  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,11 +336,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.sample(n=50000, random_state=random_seed)"
+    "n_samples = 50000\n",
+    "df = df.sample(n=n_samples, random_state=random_seed)"
    ]
   },
   {
@@ -356,11 +357,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"DE\"] = 'sos ' + df[\"DE\"] + ' eos'"
+    "start_token = 'sos'\n",
+    "end_token = 'eos'\n",
+    "\n",
+    "df[\"DE\"] = start_token + ' ' + df[\"DE\"] + ' ' + end_token"
    ]
   },
   {
@@ -378,24 +382,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_df.shape = (5000, 2)\n",
-      "valid_df.shape = (5000, 2)\n",
-      "train_df.shape = (40000, 2)\n"
+      "test_df.shape = (500, 2)\n",
+      "valid_df.shape = (500, 2)\n",
+      "train_df.shape = (4000, 2)\n"
      ]
     }
    ],
    "source": [
     "# Randomly sample 5000 examples from the total 50000 randomly\n",
-    "test_df = df.sample(n=5000, random_state=random_seed)\n",
+    "test_df = df.sample(n=int(n_samples/10), random_state=random_seed)\n",
     "# Randomly sample 5000 examples from the total 50000 randomly\n",
-    "valid_df = df.loc[~df.index.isin(test_df.index)].sample(n=5000, random_state=random_seed)\n",
+    "valid_df = df.loc[~df.index.isin(test_df.index)].sample(n=int(n_samples/10), random_state=random_seed)\n",
     "# Assign the rest to training data\n",
     "train_df = df.loc[~(df.index.isin(test_df.index) | df.index.isin(valid_df.index))]\n",
     "\n",
@@ -415,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -424,35 +428,35 @@
      "text": [
       "English corpus\n",
       "==================================================\n",
-      "Tom    9427\n",
-      "to     8673\n",
-      "I      8436\n",
-      "the    6999\n",
-      "you    6125\n",
-      "a      5680\n",
-      "is     4374\n",
-      "in     2664\n",
-      "of     2613\n",
-      "was    2298\n",
+      "Tom    903\n",
+      "to     873\n",
+      "I      836\n",
+      "the    738\n",
+      "a      620\n",
+      "you    616\n",
+      "is     422\n",
+      "of     280\n",
+      "in     272\n",
+      "was    237\n",
       "dtype: int64\n",
       "\n",
-      "Vocabulary size (>=10 frequent): 2238\n",
+      "Vocabulary size (>=10 frequent): 359\n",
       "\n",
       "German corpus\n",
       "==================================================\n",
-      "sos      40000\n",
-      "eos      40000\n",
-      "Tom       9928\n",
-      "Ich       7749\n",
-      "ist       4753\n",
-      "nicht     4414\n",
-      "zu        3583\n",
-      "Sie       3465\n",
-      "du        3112\n",
-      "das       2909\n",
+      "sos      8000\n",
+      "eos      8000\n",
+      "Tom       956\n",
+      "Ich       777\n",
+      "nicht     494\n",
+      "ist       429\n",
+      "Sie       364\n",
+      "zu        346\n",
+      "du        318\n",
+      "das       298\n",
       "dtype: int64\n",
       "\n",
-      "Vocabulary size (>=10 frequent): 2497\n"
+      "Vocabulary size (>=10 frequent): 336\n"
      ]
     }
    ],
@@ -509,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -522,52 +526,52 @@
       "Some summary statistics\n",
       "Median length: 6.0\n",
       "\n",
-      "count    40000.000000\n",
-      "mean         6.360650\n",
-      "std          2.667726\n",
-      "min          1.000000\n",
-      "25%          5.000000\n",
-      "50%          6.000000\n",
-      "75%          8.000000\n",
-      "max        101.000000\n",
+      "count    4000.000000\n",
+      "mean        6.369250\n",
+      "std         2.588548\n",
+      "min         1.000000\n",
+      "25%         5.000000\n",
+      "50%         6.000000\n",
+      "75%         8.000000\n",
+      "max        29.000000\n",
       "Name: EN, dtype: float64\n",
       "\n",
       "Computing the statistics between the 1% and 99% quantiles (to ignore outliers)\n",
-      "count    39504.000000\n",
-      "mean         6.228002\n",
-      "std          2.328172\n",
-      "min          2.000000\n",
-      "25%          5.000000\n",
-      "50%          6.000000\n",
-      "75%          8.000000\n",
-      "max         14.000000\n",
+      "count    3957.000000\n",
+      "mean        6.268132\n",
+      "std         2.376713\n",
+      "min         2.000000\n",
+      "25%         5.000000\n",
+      "50%         6.000000\n",
+      "75%         8.000000\n",
+      "max        14.000000\n",
       "Name: EN, dtype: float64\n",
       "\n",
       "German corpus\n",
       "==================================================\n",
       "\n",
       "Some summary statistics\n",
-      "Median length: 8.0\n",
+      "Median length: 10.0\n",
       "\n",
-      "count    40000.000000\n",
-      "mean         8.397875\n",
-      "std          2.652027\n",
-      "min          3.000000\n",
-      "25%          7.000000\n",
-      "50%          8.000000\n",
-      "75%         10.000000\n",
-      "max         77.000000\n",
+      "count    4000.000000\n",
+      "mean       10.394000\n",
+      "std         2.590549\n",
+      "min         5.000000\n",
+      "25%         9.000000\n",
+      "50%        10.000000\n",
+      "75%        12.000000\n",
+      "max        29.000000\n",
       "Name: DE, dtype: float64\n",
       "\n",
       "Computing the statistics between the 1% and 99% quantiles (to ignore outliers)\n",
-      "count    39166.000000\n",
-      "mean         8.299035\n",
-      "std          2.291474\n",
-      "min          5.000000\n",
-      "25%          7.000000\n",
-      "50%          8.000000\n",
-      "75%         10.000000\n",
-      "max         16.000000\n",
+      "count    3913.000000\n",
+      "mean       10.300281\n",
+      "std         2.311734\n",
+      "min         7.000000\n",
+      "25%         9.000000\n",
+      "50%        10.000000\n",
+      "75%        12.000000\n",
+      "max        18.000000\n",
       "Name: DE, dtype: float64\n"
      ]
     }
@@ -611,15 +615,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EN vocabulary size: 2238\n",
-      "DE vocabulary size: 2497\n",
+      "EN vocabulary size: 359\n",
+      "DE vocabulary size: 336\n",
       "EN max sequence length: 19\n",
       "DE max sequence length: 21\n"
      ]
@@ -648,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -721,8 +725,8 @@
       "\n",
       "\n",
       "Token IDs: \n",
-      "[[427   0   0]\n",
-      " [ 75  45 117]\n",
+      "[[  1   0   0]\n",
+      " [ 72  46 110]\n",
       " [  1   1   0]]\n"
      ]
     }
@@ -1534,13 +1538,15 @@
     "def generate_new_translation(en_model, de_model, de_vocabulary, sample_en_text):\n",
     "    \"\"\" Generate a new translation \"\"\"\n",
     "    \n",
+    "    start_token = 'sos'\n",
+    "    \n",
     "    # Print the input\n",
     "    print(\"Input: {}\".format(sample_en_text))\n",
     "    \n",
     "    # Get the initial state for the decoder\n",
     "    d_state = en_model.predict(np.array([sample_en_text]))\n",
     "    # First word will be sos\n",
-    "    de_word = 'sos'\n",
+    "    de_word = start_token\n",
     "    # We collect the translation in this list\n",
     "    de_translation = []\n",
     "    \n",
@@ -1578,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1594,8 +1600,9 @@
     "    There are three sets of weights introduced W_a, U_a, and V_a\n",
     "     \"\"\"\n",
     "\n",
-    "    def __init__(self, cell_fn, **kwargs):\n",
+    "    def __init__(self, cell_fn, units, **kwargs):\n",
     "        self._cell_fn = cell_fn\n",
+    "        self.units = units\n",
     "        super(DecoderRNNAttentionWrapper, self).__init__(**kwargs)\n",
     "\n",
     "    def build(self, input_shape):\n",
@@ -1603,16 +1610,18 @@
     "        assert isinstance(input_shape, list)\n",
     "        # Create a trainable weight variable for this layer.\n",
     "        # Weight matrices of the attention layer\n",
+    "        # W_a is a [s, self.units] sized matrix\n",
     "        self.W_a = self.add_weight(name='W_a',\n",
-    "                                   shape=tf.TensorShape((input_shape[0][2], input_shape[0][2])),\n",
+    "                                   shape=tf.TensorShape((input_shape[0][2], self.units)),\n",
     "                                   initializer='uniform',\n",
     "                                   trainable=True)\n",
+    "        # U_a is a [h, self.units] sized matrix\n",
     "        self.U_a = self.add_weight(name='U_a',\n",
-    "                                   shape=tf.TensorShape((self._cell_fn.units, self._cell_fn.units)),\n",
+    "                                   shape=tf.TensorShape((self._cell_fn.units, self.units)),\n",
     "                                   initializer='uniform',\n",
     "                                   trainable=True)\n",
     "        self.V_a = self.add_weight(name='V_a',\n",
-    "                                   shape=tf.TensorShape((input_shape[0][2], 1)),\n",
+    "                                   shape=tf.TensorShape((self.units, 1)),\n",
     "                                   initializer='uniform',\n",
     "                                   trainable=True)\n",
     "\n",
@@ -1690,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1725,7 +1734,7 @@
     "        return tf.keras.models.Model(inputs=inp, outputs=vectorized_out, name=name), vectorize_layer.get_vocabulary()\n",
     "    \n",
     "        \n",
-    "def get_encoder(n_vocab, vectorizer):\n",
+    "def get_encoder_with_attention(n_vocab, vectorizer):\n",
     "    \"\"\" Define the encoder of the seq2seq model\"\"\"\n",
     "    \n",
     "    # The input is (None,1) shaped and accepts an array of strings\n",
@@ -1785,7 +1794,7 @@
     "    d_init_state = tf.keras.layers.Concatenate(axis=-1)([fwd_state, bwd_state])\n",
     "    \n",
     "    gru_cell = tf.keras.layers.GRUCell(256)\n",
-    "    attn_out, _  = DecoderRNNAttentionWrapper(cell_fn=gru_cell, name=\"d_attention\")([en_states, d_emb_out], initial_state=d_init_state)\n",
+    "    attn_out, _  = DecoderRNNAttentionWrapper(cell_fn=gru_cell, units=512, name=\"d_attention\")([en_states, d_emb_out], initial_state=d_init_state)\n",
     "\n",
     "    # Define an intermediate dense layer\n",
     "    d_dense_layer_1 = tf.keras.layers.Dense(512, activation='relu', name='d_dense_1')\n",
@@ -1819,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1834,25 +1843,25 @@
       "__________________________________________________________________________________________________\n",
       "d_input (InputLayer)            [(None, 1)]          0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "encoder (Functional)            [(None, 128), (None, 484864      e_input_final[0][0]              \n",
+      "encoder (Functional)            [(None, 128), (None, 244352      e_input_final[0][0]              \n",
       "__________________________________________________________________________________________________\n",
       "d_vectorizer (Functional)       (None, 20)           0           d_input[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "d_embedding (Embedding)         (None, 20, 128)      319872      d_vectorizer[0][0]               \n",
+      "d_embedding (Embedding)         (None, 20, 128)      43264       d_vectorizer[0][0]               \n",
       "__________________________________________________________________________________________________\n",
       "concatenate (Concatenate)       (None, 256)          0           encoder[0][0]                    \n",
       "                                                                 encoder[0][1]                    \n",
       "__________________________________________________________________________________________________\n",
-      "d_attention (DecoderRNNAttentio ((None, 20, 256), (N 624384      encoder[0][2]                    \n",
+      "d_attention (DecoderRNNAttentio ((None, 20, 256), (N 755712      encoder[0][2]                    \n",
       "                                                                 d_embedding[0][0]                \n",
       "                                                                 concatenate[0][0]                \n",
       "__________________________________________________________________________________________________\n",
       "d_dense_1 (Dense)               (None, 20, 512)      131584      d_attention[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "d_dense_final (Dense)           (None, 20, 2499)     1281987     d_dense_1[0][0]                  \n",
+      "d_dense_final (Dense)           (None, 20, 338)      173394      d_dense_1[0][0]                  \n",
       "==================================================================================================\n",
-      "Total params: 2,842,691\n",
-      "Trainable params: 2,842,691\n",
+      "Total params: 1,348,306\n",
+      "Trainable params: 1,348,306\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
