--- a/Ch11-Ch12-Sequence-to-Sequence-Learning-with-TF2/11.1_seq2seq_machine_translation_part_1.ipynb
+++ b/Ch11-Ch12-Sequence-to-Sequence-Learning-with-TF2/11.1_seq2seq_machine_translation_part_1.ipynb
@@ -111,6 +111,8 @@
     }
    ],
    "source": [
+    "# Section 11.1\n",
+    "\n",
     "import os\n",
     "import requests\n",
     "import zipfile\n",
@@ -152,6 +154,8 @@
     }
    ],
    "source": [
+    "# Section 11.1\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "# Read the csv file\n",
@@ -461,6 +465,8 @@
     }
    ],
    "source": [
+    "# Section 11.1\n",
+    "\n",
     "from collections import Counter\n",
     "\n",
     "# Create a flattened list from English words\n",
@@ -471,6 +477,7 @@
     "# Get the vocabulary size of words appearing more than or equal to 10 times\n",
     "n=10\n",
     "\n",
+    "# Code listing 11.1\n",
     "def get_vocabulary_size_greater_than(words, n, verbose=True):\n",
     "    \n",
     "    \"\"\" Get the vocabulary size above a certain threshold \"\"\"\n",
@@ -577,6 +584,9 @@
     }
    ],
    "source": [
+    "# Section 11.1\n",
+    "\n",
+    "# Code listing 11.2\n",
     "def print_sequence_length(str_ser):\n",
     "    \n",
     "    \"\"\" Print the summary stats of the sequence length \"\"\"\n",
@@ -670,6 +680,8 @@
     }
    ],
    "source": [
+    "# Section 11.2\n",
+    "\n",
     "from tensorflow.keras.layers.experimental.preprocessing import TextVectorization\n",
     "\n",
     "print(\"Defined the vectorization layer for English\")\n",
@@ -838,6 +850,8 @@
     }
    ],
    "source": [
+    "# Section 11.2\n",
+    "\n",
     "print(\"English\")\n",
     "# Print first few words in the vocabulary\n",
     "print(en_vectorize_layer.get_vocabulary()[:10])\n",
@@ -866,9 +880,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 11.2\n",
+    "\n",
     "import tensorflow.keras.backend as K\n",
     "K.clear_session()\n",
     "\n",
+    "# Code listing 11.3\n",
     "def get_vectorizer(corpus, n_vocab, max_length=None, return_vocabulary=True, name=None):\n",
     "    \n",
     "    \"\"\" Return a text vectorization layer or a model \"\"\"\n",
@@ -895,7 +912,7 @@
     "        # Returns the vocabulary in addition to the model\n",
     "        return tf.keras.models.Model(inputs=inp, outputs=vectorized_out, name=name), vectorize_layer.get_vocabulary()\n",
     "    \n",
-    "        \n",
+    "# Code listing 11.4   \n",
     "def get_encoder(n_vocab, vectorizer):\n",
     "    \"\"\" Define the encoder of the seq2seq model\"\"\"\n",
     "    \n",
@@ -924,6 +941,7 @@
     "    return encoder\n",
     "\n",
     "\n",
+    "# Code listing 11.5\n",
     "def get_final_seq2seq_model(n_vocab, encoder, vectorizer):\n",
     "    \"\"\" Define the final encoder-decoder model \"\"\"\n",
     "    \n",
@@ -1026,6 +1044,7 @@
     }
    ],
    "source": [
+    "# Section 11.2\n",
     "from tensorflow.keras.metrics import SparseCategoricalAccuracy\n",
     "\n",
     "# Compile the model\n",
@@ -1058,9 +1077,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 11.3\n",
+    "\n",
     "from tensorflow.keras.layers.experimental.preprocessing import StringLookup\n",
     "from bleu import compute_bleu\n",
     "\n",
+    "# Code listing 11.8\n",
     "class BLEUMetric(object):\n",
     "    \n",
     "    def __init__(self, vocabulary, name='perplexity', **kwargs):\n",
@@ -1181,12 +1203,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 11.3\n",
     "import time\n",
     "\n",
     "epochs = 5\n",
     "batch_size = 128\n",
     "\n",
-    "\n",
+    "# Code listing 11.6\n",
     "def prepare_data(train_df, valid_df, test_df):\n",
     "    \"\"\" Create a data dictionary from the dataframes containing data \"\"\"\n",
     "    \n",
@@ -1199,7 +1222,7 @@
     "    \n",
     "    return data_dict\n",
     "\n",
-    "\n",
+    "# Code listing 11.7\n",
     "def shuffle_data(en_inputs, de_inputs, de_labels, shuffle_inds=None): \n",
     "    \"\"\" Shuffle the data randomly (but all of inputs and labels at ones)\"\"\"\n",
     "        \n",
@@ -1214,6 +1237,7 @@
     "    return (en_inputs[shuffle_inds], de_inputs[shuffle_inds], de_labels[shuffle_inds]), shuffle_inds\n",
     "\n",
     "\n",
+    "# Code listing 11.9\n",
     "def evaluate_model(model, vectorizer, en_inputs_raw, de_inputs_raw, de_labels_raw, batch_size):\n",
     "    \"\"\" Evaluate the model on various metrics such as loss, accuracy and BLEU \"\"\"\n",
     "    \n",
@@ -1246,7 +1270,8 @@
     "    \n",
     "    return np.mean(loss_log), np.mean(accuracy_log), np.mean(bleu_log)\n",
     "    \n",
-    "        \n",
+    "\n",
+    "# Code listing 11.10\n",
     "def train_model(model, vectorizer, train_df, valid_df, test_df, epochs, batch_size):\n",
     "    \"\"\" Training the model and evaluating on validation/test sets \"\"\"\n",
     "    \n",
@@ -1395,6 +1420,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 11.3\n",
+    "\n",
     "## Save the model\n",
     "os.makedirs('models', exist_ok=True)\n",
     "tf.keras.models.save_model(final_model, os.path.join('models', 'seq2seq'))\n",
@@ -1436,6 +1463,9 @@
     }
    ],
    "source": [
+    "# Section 11.4\n",
+    "\n",
+    "# Code listing 11.11\n",
     "import tensorflow.keras.backend as K\n",
     "K.clear_session()\n",
     "\n",
@@ -1535,6 +1565,7 @@
     }
    ],
    "source": [
+    "# Code listing 11.12\n",
     "def generate_new_translation(en_model, de_model, de_vocabulary, sample_en_text):\n",
     "    \"\"\" Generate a new translation \"\"\"\n",
     "    \n",
