--- a/Ch11-Ch12-Sequence-to-Sequence-Learning-with-TF2/12.1_seq2seq_machine_translation_part_2.ipynb
+++ b/Ch11-Ch12-Sequence-to-Sequence-Learning-with-TF2/12.1_seq2seq_machine_translation_part_2.ipynb
@@ -672,6 +672,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Section 12.1\n",
+    "\n",
     "import tensorflow as tf\n",
     "import os\n",
     "from tensorflow.python.keras.layers import Layer\n",
@@ -711,6 +713,7 @@
     "\n",
     "        super(DecoderRNNAttentionWrapper, self).build(input_shape)  # Be sure to call this at the end\n",
     "\n",
+    "    # Code listing 12.1\n",
     "    def call(self, inputs, initial_state, training=False):\n",
     "        \"\"\"\n",
     "        inputs: [encoder_output_sequence, decoder_output_sequence]\n",
@@ -787,10 +790,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# Section 12.1\n",
     "import tensorflow.keras.backend as K\n",
     "K.clear_session()\n",
     "\n",
+    "# Code listing 12.3\n",
     "def get_vectorizer(list_of_strings, n_vocab, max_length=None, return_vocabulary=True, name=None):\n",
     "    \n",
     "    \"\"\" Return a text vectorization layer or a model \"\"\"\n",
@@ -817,7 +821,7 @@
     "        # Returns the vocabulary in addition to the model\n",
     "        return tf.keras.models.Model(inputs=inp, outputs=vectorized_out, name=name), vectorize_layer.get_vocabulary()\n",
     "    \n",
-    "        \n",
+    "# Code listing 12.4        \n",
     "def get_encoder_with_attention(n_vocab, vectorizer):\n",
     "    \"\"\" Define the encoder of the seq2seq model\"\"\"\n",
     "    \n",
@@ -849,7 +853,7 @@
     "    # is passed as the initial state to the decoder\n",
     "    return encoder\n",
     "\n",
-    "\n",
+    "# Code listing 12.2\n",
     "def get_final_seq2seq_model_with_attention(n_vocab, encoder, vectorizer):\n",
     "    \"\"\" Define the final encoder-decoder model \"\"\"\n",
     "    \n",
@@ -952,6 +956,8 @@
     }
    ],
    "source": [
+    "# Section 12.1\n",
+    "\n",
     "# Compile the model\n",
     "final_model_with_attention.compile(\n",
     "    loss='sparse_categorical_crossentropy', \n",
@@ -1296,6 +1302,8 @@
     }
    ],
    "source": [
+    "# Section 12.1\n",
+    "\n",
     "epochs = 5\n",
     "batch_size = 128\n",
     "\n",
@@ -1341,6 +1349,8 @@
     }
    ],
    "source": [
+    "# Section 12.1\n",
+    "\n",
     "## Save the model\n",
     "os.makedirs('models', exist_ok=True)\n",
     "tf.keras.models.save_model(final_model_with_attention, os.path.join('models', 'seq2seq_attention'))\n",
@@ -1380,9 +1390,12 @@
     }
    ],
    "source": [
+    "# Section 12.2\n",
+    "\n",
     "import tensorflow.keras.backend as K\n",
     "K.clear_session()\n",
     "\n",
+    "# Code listing 12.5\n",
     "def attention_visualizer(save_path):\n",
     "    \"\"\" Define the attention visualizer model \"\"\"\n",
     "    \n",
@@ -1588,9 +1601,12 @@
     }
    ],
    "source": [
+    "# Section 12.2\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
+    "# Code listing 12.6\n",
     "def visualize_attention(visualizer_model, en_vocabulary, de_vocabulary, sample_en_text, sample_de_text, fig_savepath):\n",
     "    \"\"\" Visualize the attention patterns \"\"\"\n",
     "    \n",
