--- a/Ch11-Ch12-Sequence-to-Sequence-Learning-with-TF2/11.1_seq2seq_machine_translation_part_1.ipynb
+++ b/Ch11-Ch12-Sequence-to-Sequence-Learning-with-TF2/11.1_seq2seq_machine_translation_part_1.ipynb
@@ -26,14 +26,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.4.1\n",
-      "Warning: random module is not imported. Setting the seed for random failed.\n"
+      "TensorFlow version: 2.5.0\n"
      ]
     }
    ],
    "source": [
+    "import random\n",
     "import tensorflow as tf\n",
-    "print(tf.__version__)\n",
     "import numpy as np\n",
     "import time\n",
     "import json\n",
@@ -55,7 +54,9 @@
     " \n",
     "# Fixing the random seed\n",
     "random_seed=4321\n",
-    "fix_random_seed(random_seed)\n"
+    "fix_random_seed(random_seed)\n",
+    "\n",
+    "print(\"TensorFlow version: {}\".format(tf.__version__))"
    ]
   },
   {
