--- a/Ch11-Ch12-Sequence-to-Sequence-Learning-with-TF2/12.1_seq2seq_machine_translation_part_2.ipynb
+++ b/Ch11-Ch12-Sequence-to-Sequence-Learning-with-TF2/12.1_seq2seq_machine_translation_part_2.ipynb
@@ -32,8 +32,8 @@
     }
    ],
    "source": [
+    "import random\n",
     "import tensorflow as tf\n",
-    "print(tf.__version__)\n",
     "import numpy as np\n",
     "import time\n",
     "import json\n",
@@ -55,7 +55,9 @@
     " \n",
     "# Fixing the random seed\n",
     "random_seed=4321\n",
-    "fix_random_seed(random_seed)\n"
+    "fix_random_seed(random_seed)\n",
+    "\n",
+    "print(\"TensorFlow version: {}\".format(tf.__version__))"
    ]
   },
   {
